--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,19 +2,88 @@
 v2.0 | 20110126
 License: none (public domain)
 */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video, button {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video,
+button {
   margin: 0;
   padding: 0;
   border: 0;
@@ -23,21 +92,34 @@ time, mark, audio, video, button {
   vertical-align: baseline; }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block; }
 
 body {
   line-height: 1; }
 
-ol, ul {
+ol,
+ul {
   list-style: none; }
 
-blockquote, q {
+blockquote,
+q {
   quotes: none; }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
   content: '';
   content: none; }
 
@@ -60,14 +142,14 @@ table {
   font-style: normal; }
 
 @font-face {
-  font-family: "spotifyapp";
+  font-family: 'spotifyapp';
   src: url("../fonts/spotifyapp.eot");
   src: url("../fonts/spotifyapp.eot?#iefix") format("embedded-opentype"), url("../fonts/spotifyapp.woff") format("woff"), url("../fonts/spotifyapp.ttf") format("truetype"), url("../fonts/spotifyapp.svg#spotifyapp") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 [data-icon]:before {
-  font-family: "spotifyapp" !important;
+  font-family: 'spotifyapp' !important;
   content: attr(data-icon);
   font-style: normal !important;
   font-weight: normal !important;
@@ -78,9 +160,9 @@ table {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
-  font-family: "spotifyapp" !important;
+[class^='icon-']:before,
+[class*=' icon-']:before {
+  font-family: 'spotifyapp' !important;
   font-style: normal !important;
   font-weight: normal !important;
   font-variant: normal !important;
@@ -93,52 +175,52 @@ table {
   -moz-osx-font-smoothing: grayscale; }
 
 .icon-spotify:before {
-  content: "\61"; }
+  content: '\61'; }
 
 .icon-facebook:before {
-  content: "\62"; }
+  content: '\62'; }
 
 .icon-facebook-square:before {
-  content: "\63"; }
+  content: '\63'; }
 
 .icon-facebook-official:before {
-  content: "\64"; }
+  content: '\64'; }
 
 .icon-twitter-square:before {
-  content: "\65"; }
+  content: '\65'; }
 
 .icon-twitter:before {
-  content: "\66"; }
+  content: '\66'; }
 
 .icon-times-circle-o:before {
-  content: "\67"; }
+  content: '\67'; }
 
 .icon-times-circle:before {
-  content: "\68"; }
+  content: '\68'; }
 
 .icon-times:before {
-  content: "\69"; }
+  content: '\69'; }
 
 .icon-youtube-play:before {
-  content: "\6a"; }
+  content: '\6a'; }
 
 .icon-play-circle-o:before {
-  content: "\6b"; }
+  content: '\6b'; }
 
 .icon-play-circle:before {
-  content: "\6c"; }
+  content: '\6c'; }
 
 .icon-play:before {
-  content: "\6d"; }
+  content: '\6d'; }
 
 .icon-foursquare:before {
-  content: "\6e"; }
+  content: '\6e'; }
 
 .icon-zoom-in:before {
-  content: "\6f"; }
+  content: '\6f'; }
 
 .icon-zoom-out:before {
-  content: "\70"; }
+  content: '\70'; }
 
 /* GLOBALS */
 html {
@@ -147,7 +229,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  color: #FFF;
+  color: #fff;
   line-height: 1.33;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: antialiased;
@@ -166,8 +248,8 @@ p {
 
 .btn {
   background: #000;
-  color: #FFF;
-  border: 1px solid #FFF;
+  color: #fff;
+  border: 1px solid #fff;
   border-radius: 24px;
   font-size: 18px;
   padding: 10px 30px;
@@ -179,7 +261,7 @@ p {
   text-decoration: none;
   display: inline-block; }
   .btn:hover {
-    background: #FFF;
+    background: #fff;
     color: #000; }
 
 .btn-small {
