--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,145 +1,302 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-v2.0 | 20110126
-License: none (public domain)
-*/
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
+/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+@import url("https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans+Condensed:300");
+html {
+  line-height: 1.15;
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */ }
+
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers.
+ */
+body {
+  margin: 0; }
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0; }
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  box-sizing: content-box;
+  /* 1 */
+  height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */ }
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */ }
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
+  background-color: transparent; }
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none;
+  /* 1 */
+  text-decoration: underline;
+  /* 2 */
+  text-decoration: underline dotted;
+  /* 2 */ }
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
 b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video,
-button {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font-family: 'hbo-regular', helvetica, arial, sans-serif;
+strong {
+  font-weight: bolder; }
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */ }
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%; }
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
   vertical-align: baseline; }
 
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
+sub {
+  bottom: -0.25em; }
+
+sup {
+  top: -0.5em; }
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
+  border-style: none; }
+
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */ }
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input {
+  /* 1 */
+  overflow: visible; }
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select {
+  /* 1 */
+  text-transform: none; }
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button; }
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0; }
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText; }
+
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em; }
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  box-sizing: border-box;
+  /* 1 */
+  color: inherit;
+  /* 2 */
+  display: table;
+  /* 1 */
+  max-width: 100%;
+  /* 1 */
+  padding: 0;
+  /* 3 */
+  white-space: normal;
+  /* 1 */ }
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  vertical-align: baseline; }
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
+  overflow: auto; }
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */ }
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto; }
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */ }
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none; }
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */ }
+
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+details {
   display: block; }
 
-body {
-  line-height: 1; }
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item; }
 
-ol,
-ul {
-  list-style: none; }
+/* Misc
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10+.
+ */
+template {
+  display: none; }
 
-blockquote,
-q {
-  quotes: none; }
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-@font-face {
-  font-family: 'hbo-regular';
-  src: url("../fonts/hurme-regular.eot");
-  src: url("../fonts/hurme-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/hurme-regular.woff2") format("woff2"), url("../fonts/hurme-regular.woff") format("woff"), url("../fonts/hurme-regular.ttf") format("truetype"), url("../fonts/hurme-regular.svg#besom_2regular") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'hbo-regular';
-  src: url("../fonts/hurme-regular.eot");
-  src: url("../fonts/hurme-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/hurme-regular.woff2") format("woff2"), url("../fonts/hurme-regular.woff") format("woff"), url("../fonts/hurme-regular.ttf") format("truetype"), url("../fonts/hurme-regular.svg#besom_2regular") format("svg");
-  font-weight: normal;
-  font-style: normal; }
+/**
+ * Add the correct display in IE 10.
+ */
+[hidden] {
+  display: none; }
 
 @font-face {
   font-family: 'spotifyapp';
@@ -227,240 +384,180 @@ html {
   overflow-x: hidden; }
 
 body {
-  margin: 0;
-  padding: 0;
-  color: #fff;
-  line-height: 1.33;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: antialiased;
-  font-smoothing: antialiased; }
+  font-smoothing: antialiased;
+  font-family: 'Open Sans Condensed', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  color: #231f20;
+  line-height: 1.3;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eff3f4+0,aaaeaf+100 */
+  background: #eff3f4;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #eff3f4 0%, #aaaeaf 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #eff3f4 0%, #aaaeaf 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #eff3f4 0%, #aaaeaf 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eff3f4', endColorstr='#aaaeaf',GradientType=0 );
+  /* IE6-9 */ }
 
 img {
   max-width: 100%;
   height: auto; }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Montserrat'; }
+
+h2 {
+  font-size: 24px; }
+
+p {
+  margin-top: 0.5em;
+  margin-bottom: 14px; }
+
 a {
   color: #00b8f9;
   text-decoration: none; }
 
-p {
-  margin-bottom: 14px; }
-
 .btn {
-  background: #000;
-  color: #fff;
-  border: 1px solid #fff;
-  border-radius: 24px;
-  font-size: 18px;
-  padding: 10px 30px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  margin: 0.5em;
-  transition: all 0.4s ease-in-out;
   cursor: pointer;
+  display: inline-block;
   text-decoration: none;
-  display: inline-block; }
-  .btn:hover {
-    background: #fff;
-    color: #000; }
+  transition: all 0.3s ease-in-out;
+  margin: 0.5em;
+  padding: 0.7em 2em;
+  border: none;
+  border-radius: 100px;
+  font-family: 'Montserrat';
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 1.5; }
+  .btn i {
+    font-size: 1.2em; }
 
 .btn-small {
   font-size: 13px; }
 
 .btn-primary {
-  background: #00b8f9;
-  color: #003861;
-  border: 1px solid #003861;
-  font-size: 13px; }
+  background: #df258c;
+  color: #fff; }
   .btn-primary:hover {
-    background: #003861;
-    color: #00b8f9;
-    border: 1px solid #00b8f9; }
+    background: #0cb0dc; }
 
-footer .btn-small {
-  letter-spacing: 0px;
-  margin: 4px 4px 4px 16px;
-  padding: 4px 8px;
-  color: #666;
-  border: none; }
+.btn-white {
+  background: #fff;
+  color: #231f20; }
+  .btn-white:hover {
+    color: #fff;
+    background: #0cb0dc; }
 
-#root {
-  background: #000; }
-  #root.serie-ballers {
-    background-image: url(../images/bg-ballers.jpg); }
-  #root.serie-bigLittleLies {
-    background-image: url(../images/bg-bigLittleLies.jpg); }
-  #root.serie-girls {
-    background-image: url(../images/bg-girls.jpg); }
-  #root.serie-insecure {
-    background-image: url(../images/bg-insecure.jpg); }
-  #root.serie-siliconValley {
-    background-image: url(../images/bg-siliconValley.jpg); }
-  #root.serie-theDeuce {
-    background-image: url(../images/bg-theDeuce.jpg); }
-  #root.serie-gameOfThrones {
-    background-image: url(../images/bg-gameOfThrones.jpg); }
-  #root.serie-westworld {
-    background-image: url(../images/bg-westworld.jpg); }
-
-.app {
+/* APP */
+.app-container {
   display: flex;
   flex-direction: column;
   min-height: 100vh; }
 
-section.header {
-  margin: 30px 1em 0px;
-  display: flex;
-  justify-content: flex-end; }
-  section.header span {
-    position: relative;
-    z-index: 100;
-    max-width: 70px; }
+.header {
+  padding: 1em; }
+  .header img {
+    max-height: 20px; }
+  @media (min-width: 720px) {
+    .header {
+      position: fixed;
+      top: 0px;
+      left: 0px; } }
 
-section.main {
+.main {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   justify-content: center;
-  width: 100%;
+  width: 90%;
   max-width: 1024px;
   margin: 0px auto; }
 
-footer.footer {
+.footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 12px;
-  margin-bottom: 1em; }
-  footer.footer span {
+  margin-bottom: 1em;
+  color: #fff; }
+  .footer span {
     margin-left: 0.66em;
     width: 90px; }
 
 /* SECTIONS */
-section.login {
+.section-home {
   text-align: center; }
-  section.login h2 {
+  .section-home figure,
+  .section-home hgroup {
     max-width: 350px;
-    margin: 10px auto 20px;
-    font-size: 18px; }
-  section.login article {
-    max-width: 460px;
-    margin: 0px auto;
-    padding: 30px;
-    position: relative;
-    z-index: 50; }
-    section.login article img {
-      max-width: 256px; }
+    margin: 0.5em auto 1em; }
 
-section.video {
+.section-analizer {
+  text-align: center; }
+  .section-analizer .analizer-info {
+    margin: 1em; }
+
+.section-resultado {
+  text-align: center;
+  max-width: 500px;
+  margin: 0px auto; }
+  .section-resultado figure {
+    max-width: 340px;
+    margin: 1em auto 0; }
+
+.spinner {
+  height: 280px;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.playlist-container {
+  width: 300px;
+  margin: 1em auto 0;
+  text-align: center; }
+
+.sharing-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1em;
+  margin-bottom: 1em; }
+
+.SocialMediaShareButton {
+  cursor: pointer;
+  transition: color 0.3s ease-in-out;
+  margin: 5px; }
+  .SocialMediaShareButton:hover {
+    color: #00b8f9; }
+
+.video-player {
   max-width: 640px;
   margin: 0px auto;
   justify-content: center;
   display: flex;
   flex-direction: column; }
-  section.video .player {
-    box-shadow: 0px 0px 100px #000;
+  .video-player .player {
+    box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.33);
     width: 90% !important;
     max-width: 640px !important;
     height: auto !important; }
-  section.video .info {
-    text-align: center;
-    margin: 1em; }
+  .video-player .hidden {
+    display: none; }
 
-section.resultado .row {
+.social-buttons ul {
+  list-style: none;
+  padding-left: 0px;
   display: flex;
-  align-items: flex-end; }
-
-section.resultado .perfil {
-  flex-grow: 1;
-  justify-content: center;
-  margin: 10px 20px;
-  text-align: center;
-  text-shadow: 0px 0px 10px #000; }
-  section.resultado .perfil h1 {
-    max-width: 300px;
-    margin: 0px auto; }
-  section.resultado .perfil h2 {
-    font-size: 32px; }
-  section.resultado .perfil strong {
-    color: #049dd3; }
-
-section.resultado .perfil hgroup,
-section.resultado .series {
-  max-width: 500px;
-  margin: 0px auto; }
-
-section.resultado .series {
-  display: flex;
-  flex-direction: row; }
-
-section.resultado .serie {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  flex-basis: 0;
-  flex-grow: 1;
-  margin: 15px;
-  position: relative; }
-
-section.resultado .playlist {
-  width: 300px;
-  margin: 10px 0px;
-  text-align: center; }
-
-section.resultado .iframe {
-  width: 100%;
-  height: 300px;
-  background: #181818;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-
-section.resultado .sharing {
-  display: flex;
-  justify-content: center;
   align-items: center;
-  background: #313131;
-  margin-top: -7px;
-  padding: 10px;
-  font-size: 13px; }
-  section.resultado .sharing span {
-    margin-right: 10px; }
+  justify-content: center; }
 
-section.resultado .SocialMediaShareButton {
-  cursor: pointer;
-  transition: color 0.3s ease-in-out; }
-  section.resultado .SocialMediaShareButton:hover {
-    color: #00b8f9; }
+.social-buttons li {
+  margin: 0.5em 0; }
 
-section.resultado .icon {
-  font-size: 18px;
-  padding: 5px; }
-
-/* Circular sliders */
-.Slider {
-  z-index: 12;
-  display: block;
-  width: 5rem;
-  height: 5rem;
-  transform: rotate(-90deg);
-  cursor: ns-resize;
-  margin: 0px auto;
-  position: relative; }
-  .Slider .Slider-circle,
-  .Slider .Slider-bar {
-    fill: transparent; }
-  .Slider .Slider-circle {
-    stroke: #003861; }
-  .Slider .Slider-bar {
-    stroke: #00b8f9;
-    stroke-dashoffset: 0;
-    stroke-dasharray: 0; }
-
-.Slider-percent {
-  z-index: 9;
-  position: absolute;
-  bottom: 30px;
-  left: 0px;
-  right: 0px;
-  text-align: center; }
+.social-buttons a {
+  padding: 0.33em; }
