--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,245 +1,9 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-v2.0 | 20110126
-License: none (public domain)
-*/
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video,
-button {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font-family: 'hbo-regular', helvetica, arial, sans-serif;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+// Partials
+@import 'common/reset';
+@import 'common/icons';
 
 // Typography
-@font-face {
-  font-family: 'hbo-regular';
-  src: url('../fonts/hurme-regular.eot');
-  src: url('../fonts/hurme-regular.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/hurme-regular.woff2') format('woff2'),
-    url('../fonts/hurme-regular.woff') format('woff'),
-    url('../fonts/hurme-regular.ttf') format('truetype'),
-    url('../fonts/hurme-regular.svg#besom_2regular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'hbo-regular';
-  src: url('../fonts/hurme-regular.eot');
-  src: url('../fonts/hurme-regular.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/hurme-regular.woff2') format('woff2'),
-    url('../fonts/hurme-regular.woff') format('woff'),
-    url('../fonts/hurme-regular.ttf') format('truetype'),
-    url('../fonts/hurme-regular.svg#besom_2regular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'spotifyapp';
-  src: url('../fonts/spotifyapp.eot');
-  src: url('../fonts/spotifyapp.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/spotifyapp.woff') format('woff'),
-    url('../fonts/spotifyapp.ttf') format('truetype'),
-    url('../fonts/spotifyapp.svg#spotifyapp') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-[data-icon]:before {
-  font-family: 'spotifyapp' !important;
-  content: attr(data-icon);
-  font-style: normal !important;
-  font-weight: normal !important;
-  font-variant: normal !important;
-  text-transform: none !important;
-  speak: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-[class^='icon-']:before,
-[class*=' icon-']:before {
-  font-family: 'spotifyapp' !important;
-  font-style: normal !important;
-  font-weight: normal !important;
-  font-variant: normal !important;
-  text-transform: none !important;
-  speak: none;
-  line-height: 1;
-  top: 4px;
-  position: relative;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-spotify:before {
-  content: '\61';
-}
-.icon-facebook:before {
-  content: '\62';
-}
-.icon-facebook-square:before {
-  content: '\63';
-}
-.icon-facebook-official:before {
-  content: '\64';
-}
-.icon-twitter-square:before {
-  content: '\65';
-}
-.icon-twitter:before {
-  content: '\66';
-}
-.icon-times-circle-o:before {
-  content: '\67';
-}
-.icon-times-circle:before {
-  content: '\68';
-}
-.icon-times:before {
-  content: '\69';
-}
-.icon-youtube-play:before {
-  content: '\6a';
-}
-.icon-play-circle-o:before {
-  content: '\6b';
-}
-.icon-play-circle:before {
-  content: '\6c';
-}
-.icon-play:before {
-  content: '\6d';
-}
-.icon-foursquare:before {
-  content: '\6e';
-}
-.icon-zoom-in:before {
-  content: '\6f';
-}
-.icon-zoom-out:before {
-  content: '\70';
-}
+@import url('https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans+Condensed:300');
 
 /* GLOBALS */
 
@@ -248,13 +12,22 @@ html {
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  color: #fff;
-  line-height: 1.33;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: antialiased;
   font-smoothing: antialiased;
+
+  font-family: 'Open Sans Condensed', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  color: #231f20;
+  line-height: 1.3;
+
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eff3f4+0,aaaeaf+100 */
+  background: rgb(239,243,244); /* Old browsers */
+  background: -moz-linear-gradient(top, rgba(239,243,244,1) 0%, rgba(170,174,175,1) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(239,243,244,1) 0%,rgba(170,174,175,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(239,243,244,1) 0%,rgba(170,174,175,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eff3f4', endColorstr='#aaaeaf',GradientType=0 ); /* IE6-9 */
 }
 
 img {
@@ -262,33 +35,40 @@ img {
   height: auto;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Montserrat';
+}
+
+h2 {
+  font-size: 24px;
+}
+
+p {
+  margin-top: 0.5em;
+  margin-bottom: 14px;
+}
+
 a {
   color: #00b8f9;
   text-decoration: none;
 }
 
-p {
-  margin-bottom: 14px;
-}
-
 .btn {
-  background: #000;
-  color: #fff;
-  border: 1px solid #fff;
-  border-radius: 24px;
-  font-size: 18px;
-  padding: 10px 30px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  margin: 0.5em;
-  transition: all 0.4s ease-in-out;
   cursor: pointer;
-  text-decoration: none;
   display: inline-block;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+  margin: 0.5em;
+  padding: 0.7em 2em;
+  border: none;
+  border-radius: 100px;
+  font-family: 'Montserrat';
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 1.5;
 
-  &:hover {
-    background: #fff;
-    color: #000;
+  i { 
+    font-size: 1.2em;
   }
 }
 
@@ -297,89 +77,62 @@ p {
 }
 
 .btn-primary {
-  background: #00b8f9;
-  color: #003861;
-  border: 1px solid #003861;
-  font-size: 13px;
+  background: #df258c;
+  color: #fff;
 
   &:hover {
-    background: #003861;
-    color: #00b8f9;
-    border: 1px solid #00b8f9;
+    background: #0cb0dc;
   }
 }
 
-footer .btn-small {
-  letter-spacing: 0px;
-  margin: 4px 4px 4px 16px;
-  padding: 4px 8px;
-  color: #666;
-  border: none;
-}
-
-#root {
-  background: #000;
-
-  &.serie-ballers {
-    background-image: url(../images/bg-ballers.jpg);
-  }
-  &.serie-bigLittleLies {
-    background-image: url(../images/bg-bigLittleLies.jpg);
-  }
-  &.serie-girls {
-    background-image: url(../images/bg-girls.jpg);
-  }
-  &.serie-insecure {
-    background-image: url(../images/bg-insecure.jpg);
-  }
-  &.serie-siliconValley {
-    background-image: url(../images/bg-siliconValley.jpg);
-  }
-  &.serie-theDeuce {
-    background-image: url(../images/bg-theDeuce.jpg);
-  }
-  &.serie-gameOfThrones {
-    background-image: url(../images/bg-gameOfThrones.jpg);
-  }
-  &.serie-westworld {
-    background-image: url(../images/bg-westworld.jpg);
+.btn-white {
+  background: #fff;
+  color: #231f20;
+  
+  &:hover {
+    color: #fff;
+    background: #0cb0dc;
   }
 }
 
-.app {
+/* APP */
+
+.app-container {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
 
-section.header {
-  margin: 30px 1em 0px;
-  display: flex;
-  justify-content: flex-end;
+.header {
+  padding: 1em;
 
-  span {
-    position: relative;
-    z-index: 100;
-    max-width: 70px;
+  img {
+    max-height: 20px;
+  }
+
+  @media (min-width: 720px) {
+    position: fixed;
+    top: 0px;
+    left: 0px;
   }
 }
 
-section.main {
+.main {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   justify-content: center;
-  width: 100%;
+  width: 90%;
   max-width: 1024px;
   margin: 0px auto;
 }
 
-footer.footer {
+.footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 12px;
   margin-bottom: 1em;
+  color: #fff;
 
   span {
     margin-left: 0.66em;
@@ -389,29 +142,76 @@ footer.footer {
 
 /* SECTIONS */
 
-section.login {
+.section-home {
   text-align: center;
-
-  h2 {
+  
+  figure,
+  hgroup {
     max-width: 350px;
-    margin: 10px auto 20px;
-    font-size: 18px;
-  }
-
-  article {
-    max-width: 460px;
-    margin: 0px auto;
-    padding: 30px;
-    position: relative;
-    z-index: 50;
-
-    img {
-      max-width: 256px;
-    }
+    margin: 0.5em auto 1em;
   }
 }
 
-section.video {
+.section-analizer {
+  text-align: center;
+
+  .analizer-info {
+    margin: 1em;
+  }
+}
+
+
+.section-resultado {
+  text-align: center;
+  max-width: 500px;
+  margin: 0px auto;
+
+  figure {
+    max-width: 340px;
+    margin: 1em auto 0;
+  }  
+}
+
+// Spinner
+
+.spinner {
+  height: 280px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+// Playlist
+
+.playlist-container {
+  width: 300px;
+  margin: 1em auto 0;
+  text-align: center;
+}
+
+// Social media
+
+.sharing-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1em;
+  margin-bottom: 1em;
+}
+
+.SocialMediaShareButton {
+  cursor: pointer;
+  transition: color 0.3s ease-in-out;
+  margin: 5px;
+
+  &:hover {
+    color: #00b8f9;
+  }
+}
+
+// Video player
+
+.video-player {
   max-width: 640px;
   margin: 0px auto;
   justify-content: center;
@@ -419,146 +219,31 @@ section.video {
   flex-direction: column;
 
   .player {
-    box-shadow: 0px 0px 100px #000;
+    box-shadow: 0px 0px 24px rgba(0,0,0,.33);
     width: 90% !important;
     max-width: 640px !important;
     height: auto !important;
   }
 
-  .info {
-    text-align: center;
-    margin: 1em;
+  .hidden {
+    display: none;
   }
 }
 
-section.resultado {
-  .row {
+// Social Buttons
+
+.social-buttons{
+  ul{
+    list-style: none;
+    padding-left: 0px;
     display: flex;
-    align-items: flex-end;
-  }
-
-  // Perfil
-
-  .perfil {
-    flex-grow: 1;
-    justify-content: center;
-    margin: 10px 20px;
-    text-align: center;
-    text-shadow: 0px 0px 10px #000;
-
-    h1 {
-      max-width: 300px;
-      margin: 0px auto;
-    }
-
-    h2 {
-      font-size: 32px;
-    }
-
-    strong {
-      color: #049dd3;
-    }
-  }
-
-  .perfil hgroup,
-  .series {
-    max-width: 500px;
-    margin: 0px auto;
-  }
-
-  .series {
-    display: flex;
-    flex-direction: row;
-  }
-
-  .serie {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    flex-basis: 0;
-    flex-grow: 1;
-    margin: 15px;
-    position: relative;
-  }
-
-  // Playlist
-
-  .playlist {
-    width: 300px;
-    margin: 10px 0px;
-    text-align: center;
-  }
-
-  .iframe {
-    width: 100%;
-    height: 300px;
-    background: #181818;
-    display: flex;
-    justify-content: center;
     align-items: center;
-  }
-
-  .sharing {
-    display: flex;
     justify-content: center;
-    align-items: center;
-    background: #313131;
-    margin-top: -7px;
-    padding: 10px;
-    font-size: 13px;
-
-    span {
-      margin-right: 10px;
-    }
   }
-
-  .SocialMediaShareButton {
-    cursor: pointer;
-    transition: color 0.3s ease-in-out;
-
-    &:hover {
-      color: #00b8f9;
-    }
+  li{
+    margin: 0.5em 0; 
   }
-
-  .icon {
-    font-size: 18px;
-    padding: 5px;
+  a{
+    padding: 0.33em;
   }
-}
-
-/* Circular sliders */
-.Slider {
-  z-index: 12;
-  display: block;
-  width: 5rem;
-  height: 5rem;
-  transform: rotate(-90deg);
-  cursor: ns-resize;
-  margin: 0px auto;
-  position: relative;
-
-  .Slider-circle,
-  .Slider-bar {
-    fill: transparent;
-  }
-  .Slider-circle {
-    stroke: #003861;
-  }
-  .Slider-bar {
-    stroke: #00b8f9;
-    stroke-dashoffset: 0;
-    stroke-dasharray: 0;
-  }
-}
-.Slider-percent {
-  z-index: 9;
-  position: absolute;
-  bottom: 30px;
-  left: 0px;
-  right: 0px;
-  text-align: center;
-}
-
-@media (max-width: 720px) {
 }
