Changed analized for analyzed :s

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -499,9 +499,9 @@ a {
     max-width: 350px;
     margin: 0.5em auto 1em; }
 
-.section-analizer {
+.section-analyzer {
   text-align: center; }
-  .section-analizer .analizer-info {
+  .section-analyzer .analyzer-info {
     margin: 1em; }
 
 .section-resultado {
