--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -156,10 +156,10 @@ a {
   }
 }
 
-.section-analizer {
+.section-analyzer {
   text-align: center;
 
-  .analizer-info {
+  .analyzer-info {
     margin: 1em;
   }
 }
